# file_icon_provider

./: .gitignore  Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: rust.yml  rustdoc.yml
benches/: benchmarks.rs
examples/: iced_example.rs  provider_example.rs  save_icon.rs
src/: lib.rs  provider.rs
src/implementation/: linux.rs  macos.rs  macos.rs.orig  windows.rs
