[package]
name = "file_icon_provider"
version = "0.1.0"
edition = "2021"
authors = ["Iohann Rabeson"]
description = "Cross-platform Rust library to retrieve file icons on Windows and MacOS."
repository = "https://github.com/IohannRabeson/file_icon_provider"
readme = "README.md"
license = "MIT"
categories = ["filesystem", "graphics", "gui", "multimedia::images", "os"]

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.5.2"
objc2-foundation = { version = "0.2.2", features = ["NSString"] }
objc2-app-kit = { version = "0.2.2", features = [
    "NSBitmapImageRep", 
    "NSImageRep", 
    "NSWorkspace", 
    "NSImage", 
    "NSGraphics", 
    "NSGraphicsContext"
] }

[target.'cfg(target_os = "windows")'.dependencies]
scopeguard = "1.2.0"
windows = { version = "0.58.0", features = [
    "Win32", 
    "Win32_UI", 
    "Win32_UI_Shell", 
    "Win32_UI_WindowsAndMessaging", 
    "Win32_Graphics_Gdi", 
    "Win32_Storage", 
    "Win32_Storage_FileSystem"
] }

[dev-dependencies]
clap = { version = "4.5.21", default-features = false, features = ["std", "derive"] }
image = { version = "0.25.5", default-features = false, features = ["png"] }
