[package]
name = "file_icon_provider"
version = "0.4.0"
edition = "2024"
authors = ["Iohann Rabeson"]
description = "Cross-platform Rust library to retrieve file icons on Windows, MacOS and Linux."
repository = "https://github.com/IohannRabeson/file_icon_provider"
documentation = "https://docs.rs/file_icon_provider"
readme = "README.md"
license = "MIT"
categories = ["filesystem", "graphics", "gui", "multimedia::images", "os"]
rust-version = "1.86.0"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.5.2"
objc2-foundation = { version = "0.3.1", features = ["NSString"] }
objc2-app-kit = { version = "0.2.2", features = [
    "NSBitmapImageRep", 
    "NSImageRep", 
    "NSWorkspace", 
    "NSImage", 
    "NSGraphics", 
    "NSGraphicsContext"
] }

[target.'cfg(target_os = "windows")'.dependencies]
scopeguard = "1.2.0"
windows = { version = "0.58.0", features = [
	"Win32", 
	"Win32_UI", 
	"Win32_UI_Shell", 
	"Win32_System_Com", 
	"Win32_Graphics",
	"Win32_Graphics_Imaging",
	"Win32_Graphics_Gdi",
] }

[target.'cfg(target_os = "linux")'.dependencies]
gio = "0.20.6"
gtk = "0.18.1"

[dev-dependencies]
clap = { version = "4.5.47", default-features = false, features = ["std", "derive"] }
iced = { version = "0.13.1", features = ["image"] }
image = { version = "0.25.8", default-features = false, features = ["png"] }
# Using repository until 0.15.2 is released
rfd = { git = "https://github.com/PolyMeilex/rfd" }