[package]
name = "file_icon_provider"
version = "0.4.0"
edition = "2024"
authors = ["Iohann Rabeson"]
description = "Cross-platform Rust library to retrieve file icons on Windows, MacOS and Linux."
repository = "https://github.com/IohannRabeson/file_icon_provider"
documentation = "https://docs.rs/file_icon_provider"
readme = "README.md"
license = "MIT"
categories = ["filesystem", "graphics", "gui", "multimedia::images", "os"]
rust-version = "1.86.0"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6.3"
objc2-foundation = { version = "0.3.2", features = ["NSString"] }
objc2-app-kit = { version = "0.3.2", features = [
    "NSBitmapImageRep", 
    "NSImageRep", 
    "NSWorkspace", 
    "NSImage", 
    "NSGraphics", 
    "NSGraphicsContext"
] }
objc2-uniform-type-identifiers = { version = "0.3.2", features = ["UTType"] }

[target.'cfg(target_os = "windows")'.dependencies]
scopeguard = "1.2.0"
windows = { version = "0.62.2", features = [
	"Win32", 
	"Win32_UI", 
	"Win32_UI_Shell", 
	"Win32_System_Com", 
	"Win32_Graphics",
	"Win32_Graphics_Imaging",
	"Win32_Graphics_Gdi",
] }

[target.'cfg(target_os = "linux")'.dependencies]
gio = "0.21.5"
gtk = "0.18.2"

[dev-dependencies]
clap = { version = "4", default-features = false, features = ["std", "derive"] }
iced = { version = "0.14", features = ["image", "tokio"] }
image = { version = "0.25", default-features = false, features = ["png"] }
rfd = "0.17"
criterion = { version = "0.8.1", features = ["html_reports"] }
async-walkdir = "2.1.0"
locate-cargo-manifest = "0.2.2"

[[bench]]
name = "benchmarks"
harness = false

[dependencies]
log = "0.4.29"
